--- a/Museek/Main/Feed/HomeFeed.storyboard
+++ b/Museek/Main/Feed/HomeFeed.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina5_5" orientation="portrait">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -26,7 +26,7 @@
                     <toolbarItems/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="i4U-gJ-oRQ">
-                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" name="AppAccent"/>
@@ -46,27 +46,36 @@
             <objects>
                 <tableViewController id="wzq-4p-osL" customClass="HomeFeedVC" customModule="Museek" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="A7f-qQ-gh2">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="separatorColor" name="AppAccent"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostingCell" rowHeight="450" id="wXj-du-pJW" customClass="HomeFeedCell" customModule="Museek" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="450"/>
+                                <rect key="frame" x="0.0" y="28" width="375" height="450"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wXj-du-pJW" id="Tnv-9K-0S8">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="449.66666666666669"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="449.66666666666669"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KyR-oj-vWf">
-                                            <rect key="frame" x="0.0" y="59.999999999999986" width="414" height="231.66666666666663"/>
+                                            <rect key="frame" x="0.0" y="59.999999999999986" width="375" height="209.66666666666663"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="anS-35-NLk">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="210"/>
+                                                </imageView>
+                                            </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="KyR-oj-vWf" secondAttribute="height" multiplier="25:14" id="NHl-Vc-kgy"/>
+                                                <constraint firstAttribute="trailing" secondItem="anS-35-NLk" secondAttribute="trailing" id="SLT-Ys-71F"/>
+                                                <constraint firstAttribute="bottom" secondItem="anS-35-NLk" secondAttribute="bottom" id="hxS-eS-qIV"/>
+                                                <constraint firstItem="anS-35-NLk" firstAttribute="leading" secondItem="KyR-oj-vWf" secondAttribute="leading" id="koc-0J-Fu6"/>
+                                                <constraint firstItem="anS-35-NLk" firstAttribute="top" secondItem="KyR-oj-vWf" secondAttribute="top" id="lfn-5Z-nKG"/>
                                             </constraints>
                                         </view>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qis-gS-y2W" customClass="RoundedButton" customModule="Museek" customModuleProvider="target">
-                                            <rect key="frame" x="369" y="295.66666666666669" width="25" height="22"/>
+                                            <rect key="frame" x="334" y="273.66666666666669" width="25" height="22"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="25" id="20m-9C-ZY8"/>
                                             </constraints>
@@ -79,7 +88,7 @@
                                             </userDefinedRuntimeAttributes>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WGW-GR-LVn" customClass="RoundedButton" customModule="Museek" customModuleProvider="target">
-                                            <rect key="frame" x="369" y="332.66666666666669" width="25" height="25"/>
+                                            <rect key="frame" x="334" y="310.66666666666669" width="25" height="25"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="25" id="puV-87-n2M"/>
                                             </constraints>
@@ -92,7 +101,7 @@
                                             </userDefinedRuntimeAttributes>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="STr-ZE-eot" customClass="RoundedButton" customModule="Museek" customModuleProvider="target">
-                                            <rect key="frame" x="369" y="372.66666666666669" width="25" height="22"/>
+                                            <rect key="frame" x="334" y="350.66666666666669" width="25" height="22"/>
                                             <color key="tintColor" name="AppMain"/>
                                             <state key="normal" image="share"/>
                                             <userDefinedRuntimeAttributes>
@@ -102,16 +111,16 @@
                                             </userDefinedRuntimeAttributes>
                                         </button>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile" translatesAutoresizingMaskIntoConstraints="NO" id="2fA-fo-PzO">
-                                            <rect key="frame" x="361" y="10" width="40" height="40"/>
+                                            <rect key="frame" x="326" y="10" width="40" height="40"/>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Greatest Song Title for a Song There Can Be" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eX4-uA-gtN">
-                                            <rect key="frame" x="8" y="10" width="349" height="18"/>
+                                            <rect key="frame" x="4" y="10" width="318" height="18"/>
                                             <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="15"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mZd-Fe-MWf">
-                                            <rect key="frame" x="8" y="32" width="349" height="18"/>
+                                            <rect key="frame" x="4" y="32" width="318" height="18"/>
                                             <attributedString key="attributedText">
                                                 <fragment content="cover by ">
                                                     <attributes>
@@ -130,19 +139,19 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I've been practicing these notes. Thoughts?" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1cw-rk-oSn">
-                                            <rect key="frame" x="8" y="332.66666666666669" width="357" height="45.333333333333314"/>
+                                            <rect key="frame" x="4" y="310.66666666666669" width="326" height="67.333333333333314"/>
                                             <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="15"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Genre:" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oOU-4m-HTy">
-                                            <rect key="frame" x="8" y="295.66666666666669" width="241" height="22"/>
+                                            <rect key="frame" x="4" y="273.66666666666669" width="210" height="22"/>
                                             <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="15"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="INFO" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ODx-CR-8HT">
-                                            <rect key="frame" x="264" y="295.66666666666669" width="90" height="22"/>
+                                            <rect key="frame" x="229" y="273.66666666666669" width="90" height="22"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="90" id="Kox-bY-RbZ"/>
                                             </constraints>
@@ -195,7 +204,9 @@
                                     <outlet property="shareButton" destination="STr-ZE-eot" id="fIw-Rk-9ZC"/>
                                     <outlet property="songTitleLabel" destination="eX4-uA-gtN" id="Voy-mx-OEk"/>
                                     <outlet property="userName" destination="mZd-Fe-MWf" id="Ud8-I7-YpS"/>
+                                    <outlet property="videoThumbnail" destination="anS-35-NLk" id="ZnS-cE-Ss4"/>
                                     <outlet property="videoView" destination="KyR-oj-vWf" id="Rfp-CX-owh"/>
+                                    <outlet property="videoViewRatio" destination="NHl-Vc-kgy" id="brQ-9T-dLs"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -209,6 +220,19 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WbH-AT-B9a" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-2664.8000000000002" y="1344.0886699507389"/>
+        </scene>
+        <!--AV Player View Controller-->
+        <scene sceneID="g3F-UL-z0t">
+            <objects>
+                <avPlayerViewController storyboardIdentifier="videoPlayerVC" videoGravity="AVLayerVideoGravityResizeAspect" id="IuQ-hm-8mr" sceneMemberID="viewController">
+                    <nil key="simulatedTopBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="375" height="210"/>
+                </avPlayerViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mAM-ty-nve" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1890" y="1344"/>
         </scene>
     </scenes>
     <resources>
